<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MianLayout"
    android:weightSum="3">

    <LinearLayout style="@style/MainActionBar">

        <ImageView style="@style/MainActionBarImage" />
    </LinearLayout>

    <ScrollView
        style="@style/HomeRelativelayout"
        android:layout_gravity="center"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <LinearLayout style="@style/HomeMainButtonLayout">

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickDuas"
                        />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_dua_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickziarat" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_ziarat_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickMuntakhibSurah" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_surah_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickRajab" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_rajab_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickShaban" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_shaban_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickRamazan" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_ramzan_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="10dp"
                        android:onClick="onClickQuraniDua" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_qurani_dua_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="10dp"
                        android:onClick="onClickMukhtalifAmal" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/Mukhtalif_amale" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="10dp"
                        android:onClick="onClickContactUs" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/home_contact_us" />
                </RelativeLayout>





            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <ListView
            android:id="@+id/home_hadith_listview"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">

        </ListView>

    </LinearLayout>

</LinearLayout>
