<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MianLayout"
    android:id="@+id/amalramzanlaayout"
    android:weightSum="3">



    <ScrollView style="@style/HomeScrollViewlayout"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout style="@style/HomeMainButtonLayout"
                >

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickMushtarekAmal"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/amaleshabeqadr_mushtarka_amal_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:layout_marginTop="20dp"
                        android:onClick="onClickShabeUnnis"
                        />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amaleshabeqadr_shabe_unnis_amal_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickShabeIkkis"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amaleshabeqadr_shabe_ikkis_amal_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView
                        style="@style/HomeMainImageView"
                        android:onClick="onClickShabeTeyyes"
                        android:layout_marginTop="20dp" />

                    <TextView
                        style="@style/HomeMainTextView"
                        android:textSize="12dp"
                        android:text="@string/amaleshabeqadr_shabe_teyyes_amal_button" />
                </RelativeLayout>

                <RelativeLayout style="@style/HomeRelativelayout">

                    <ImageView style="@style/HomeMainImageView"
                        android:onClick="onClickRamzanMunajat"/>

                    <TextView
                        style="@style/HomeMainTextView"
                        android:text="@string/amaleshabeqadr_shabe_sattaes_amal_button"
                        android:textSize="12dp"
                        />
                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.startapp.android.publish.banner.Banner
                android:id="@+id/startAppBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
